--- a/userDetails/package.json
+++ b/userDetails/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.20",
+    "sharp": "^0.31.3",
+    "sharp-multer": "^0.2.5"
   },
   "name": "userdetails",
   "version": "1.0.0",
