--- a/userDetails/package.json
+++ b/userDetails/package.json
@@ -24,7 +24,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
