--- a/auth/package.json
+++ b/auth/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "type": "module",
-    "build": "react-scripts build"
+    "type": "module"
   },
   "author": "",
   "license": "ISC",
